--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Number Calculator</h1>
-        <input type="number" id="numberInput" placeholder="Enter a number">
+        <h1>π Book Flipper</h1>
+        <p>Find the location of your desired sequence of decimals at: https://www.angio.net/pi/ </p>
+        <p>Then enter the location here to find out where it hides in the book.</p>
+        <input type="number" id="numberInput" placeholder="Enter location">
         <div class="result" id="result"></div>
     </div>
 
