--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             margin: 20px;
         }
         .container {
-            max-width: 400px;
+            max-width: 500px;
             margin: auto;
             text-align: center;
         }
@@ -23,8 +23,8 @@
 <body>
     <div class="container">
         <h1>π Book Flipper</h1>
-        <p>Find the location of your desired sequence of decimals at: https://www.angio.net/pi/ </p>
-        <p>Then enter the location here to find out where it hides in the book.</p>
+        <p>Find the location of your desired sequence of decimals <a href="https://www.angio.net/pi/">here</a></p>
+        <p>Enter the location to find out where it hides in the book.</p>
         <input type="number" id="numberInput" placeholder="Enter location">
         <div class="result" id="result"></div>
     </div>
