--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="container">
         <h1>π Book Flipper</h1>
-        <p>Find the location of your desired sequence of decimals <a href="https://www.angio.net/pi/">here</a></p>
+        <p>Find the location of your desired sequence of decimals <a target="_blank" href="https://www.angio.net/pi/">here</a></p>
         <p>Enter the location to find out where it hides in the book.</p>
         <input type="number" id="numberInput" placeholder="Enter location">
         <div class="result" id="result"></div>
@@ -32,11 +32,16 @@
     <script>
         const pageLength = 5616;
         const lineLength = 108;
+        const maxPage = 179;
 
         document.getElementById('numberInput').addEventListener('input', function() {
             const num = parseInt(this.value);
             if (!isNaN(num)) {
                 const page = Math.trunc(num / pageLength) + 1;
+                if (page > maxPage) {
+                    document.getElementById('result').textContent = `Your number would be on page ${page}, which is not in the book`;
+                    return;
+                }
                 const remainder = num % pageLength;
                 const line = Math.trunc(remainder / lineLength) + 1;
                 document.getElementById('result').textContent = `Your number is on page ${page}, line ${line}`;
